CostalCloud/force-app/main/default/objects/Work_Order_History__c.object
<CustomObject>
    <fields>
        <fullName>Date_Time_of_Change__c</fullName>
        <label>Date Time of Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration_In_Minutes__c</fullName>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_days__c</fullName>
        <formula>IF( Next_History_Change__c != NULL
, Next_History_Change__r.Date_Time_of_Change__c - Date_Time_of_Change__c
, NOW() - Date_Time_of_Change__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_minutes__c</fullName>
        <formula>IF( Next_History_Change__c = NULL
, ( NOW() - Date_Time_of_Change__c ) * 1440
, Duration_In_Minutes__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_History_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next History Change</label>
        <referenceTo>Work_Order_History__c</referenceTo>
        <relationshipName>Next_Work_Order_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Changed_to__c</fullName>
        <label>Status Changed to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status_Changed_To__c</fullName>
        <label>Sub Status Changed To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipName>Work_Order_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Order Status Tracking</label>
    <nameField>
        <label>Work Order Status History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Status Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>